--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ eventlet==0.25.2
 Flask==1.1.2
 Flask-SocketIO==4.3.0
 greenlet==0.4.15
+gunicorn==20.0.4
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
